--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
   <head>
     <title>Here comes the sun 🌅</title>
     <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
     <script
       src="https://kit.fontawesome.com/690bcad10a.js"
       ;
@@ -18,6 +12,12 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
     </style>
@@ -81,6 +81,6 @@
       </div>
     </div>
     <div id="app"></div>
-    <script src="src/index.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
