--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
       </div>
     </div>
     <div id="app"></div>
+    <footer>
+      <a href="https://github.com/maevaplasse/my-first-app-project">
+        Open-source
+      </a>
+      coded by Maeva Plasse
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
