--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
     </style>
   </head>
-
-  <body
-    background="https://i.pinimg.com/originals/ec/c9/44/ecc944cd36ae94f71525abb17f52220d.jpg"
-  >
+  <body>
     <div class="box">
       <div class="container">
         <form id="search-form">
@@ -41,8 +38,8 @@
             <i class="fas fa-map-marker-alt"></i>
           </button>
         </form>
-        <h1>wed 4:06</h1>
-        <h2 id="city">Santa Cruz</h2>
+        <h1 id="city">Santa Cruz</h1>
+        <h2>wed 4:06</h2>
         <h3 id="forecast">
           <i class="fas fa-rainbow"></i>
           <span class="temperature" id="temperature">25</span>
