--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
             id="icon"
           />
           <span class="temperature" id="temperature">25</span>
-          <div class="units">C°|<a href="#" id="fahrenheit-link"> F°</a></div>
+          <div class="units">
+            <a href="#" id="celsius-link" class="active">C°</a>|<a
+              href="#"
+              id="fahrenheit-link"
+            >
+              F°</a
+            >
+          </div>
         </h3>
         <ul>
           <li id="description">Clear Sky</li>
