Added hourly forecast

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
         </form>
-        <h1 id="current-date">Date</h1>
+        <h1 id="date">Date</h1>
         <h2 id="city">Santa Barbara</h2>
         <h3 id="forecast">
           <img
@@ -66,22 +66,7 @@
         <ul>
           <li id="description">Clear Sky</li>
         </ul>
-        <div class="row">
-          <div class="col-3">
-            18H <i class="far fa-sun"></i>
-            <div class="week-temp">23C°</div>
-          </div>
-          <div class="col-3">
-            20H <i class="far fa-sun"></i>
-            <div class="week-temp">20C°</div>
-          </div>
-          <div class="col-3">
-            22H <i class="fas fa-cloud"></i>
-            <div class="week-temp">25C°</div>
-          </div>
-          <div class="col-3">
-            00H <i class="far fa-sun"></i>
-            <div class="week-temp">24C°</div>
+        <div class="row weather-forecast" id="hourly">
           </div>
         </div>
       </div>
