--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>my Californian Weather App 🌻</title>
+    <title>Here comes the sun 🌅</title>
     <meta charset="UTF-8" />
     <script
       src="https://kit.fontawesome.com/690bcad10a.js"
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
   </head>
-  <body style="background-color: #fcf8e8">
+  <body style="background-color : #f8e7c0;">
     <div class="box">
       <div class="container">
         <form id="search-form" class="mb-3">
@@ -76,7 +76,7 @@
       <a href="https://github.com/maevaplasse/my-first-app-project">
         open-source
       </a>
-      ・ coded by Maeva
+      ・ coded by Maeva Plasse
     </footer>
     <script src="src/script.js"></script>
   </body>
