--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <a href="https://github.com/maevaplasse/my-first-app-project">
         open-source
       </a>
-      ・ coded by Maeva Plasse
+      ・ coded by <a href="https://linkedin.com/in/maéva-plasse-3793b8a8">Maeva Plasse</a>
     </footer>
     <script src="src/script.js"></script>
   </body>
